--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "nodemon ./src/server/server.js"
+    "start:dev": "nodemon ./src/server/server.js",
+    "start": "node ./src/server/server.js"
   },
   "keywords": [],
   "author": "",
